<resources>
    <string name="app_name">Foody</string>
    <string name="app_name1">Foody App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Indonesia Food</string>
    <string name="hint">Search...</string>
    <string name="tv_string">Popular this Week</string>
    <string name="tv_error">An Error occured while loading data</string>
    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="loremDescription">Nasi Padang is a Padang steamed rice served with various choices of pre-cooked dishes originated from West Sumatra, Indonesia. It is known across Indonesia as Nasi Padang, after the city of Padang the capital of West Sumatra province.</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="app_subtitle">abc</string>
    <string name="tv_string2">Recommended for you</string>
    <string name="tv_name">Rendang</string>
    <string name="tv_time">45 mins</string>
    <string name="tv_delivery_type">Free Delivery</string>
    <string name="tv_recommended_price">160</string>
    <string name="tv_rating">4.5</string>
    <string name="tv_all_menu">All Menu Items</string>
    <string name="tv_intro">Welcome to Foody</string>
    <string name="tv_explore">Explore Us</string>
    <string name="btn_logIn_Intro">Log in</string>
    <string name="tv_signUp_intro">Sign Up</string>
    <string name="tv_welcome_back">Welcome Back!</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_password">Password</string>
    <string name="tv_forgot_password">Forgot Username or Password ?</string>
    <string name="tv_register">Are you new? Register</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="tv_create_account">Create Account</string>
    <string name="tv_create_description">Create a new account</string>
    <string name="tv_hint_account_name">username</string>
    <string name="tv_hint_confirm_password">Confirm Password</string>
    <string name="tv_hint_email_name">you@gmail.com</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="tv_user_name">Your Full Name</string>
    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="tv_title_forgot_password">forget password</string>
    <string name="tv_forgot_details">Provide your account\'s email for which you want to reset your password</string>
    <string name="tv_new_pass_details">Your identity has been verified! Set your new password</string>
    <string name="btn_next_forget_password">NEXT</string>
    <string name="tv_title_new_pass">new credentials</string>
    <string name="tv_hint_new_pass">New Password</string>
    <string name="tv_btn_ok">OK</string>
    <string name="tv_password_updated">Password Updated</string>
    <string name="tv_password_updated_details">Your password has been updated</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_loading">Loading...</string>
    <string name="tv_title_privacy">Privacy Policy</string>
    <string name="tv_title_information">Information Collection and Use</string>
    <string name="tv_title_logData">Log Data</string>
    <string name="tv_title_Cookie">Cookies</string>
    <string name="tv_title_Service">Service Providers</string>
    <string name="tv_title_Security">Security</string>
    <string name="tv_title_Link_to_other_site">Links to Other Sites</string>
    <string name="tv_title_child">Children’s Privacy</string>
    <string name="tv_title_change">Changes to This Privacy Policy</string>
    <string name="tv_title_contact">Contact Us</string>
    <string name="tv_modify">Last modified: August 16, 2020</string>
    <string name="tv_privacy1">Nguyen Hoang An built the Foody app as a Free app. This SERVICE is provided by Nguyen Hoang An at no cost and is intended for use as is.</string>
    <string name="tv_privacy2">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</string>
    <string name="tv_privacy3">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</string>
    <string name="tv_privacy4">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Foody unless otherwise defined in this Privacy Policy.</string>
    <string name="tv_information1">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to personal profile (including email, picture). The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
    </string>
    <string name="tv_information2">Link to privacy policy of third party service providers used by the app:</string>
    <string name="tv_information_link1">
        <a href="https://policies.google.com/privacy">Google Play Services</a>
    </string>
    <string name="tv_information_link2">
        <a href="https://firebase.google.com/support/privacy/">Firebase Crashlytics</a>
    </string>
    <string name="tv_logData">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="tv_cookie1">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device internal memory.</string>
    <string name="tv_cookie2">This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="tv_service1">I may employ third-party companies and individuals due to the following reasons:</string>
    <string name="tv_service2">- To facilitate our Service;</string>
    <string name="tv_service3">- To provide the Service on our behalf;</string>
    <string name="tv_service4">- To perform Service-related services; or</string>
    <string name="tv_service5">- To assist us in analyzing how our Service is used.</string>
    <string name="tv_service6">I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="tv_security">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="tv_link_to_other_sites">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="tv_children">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="tv_change1">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.</string>
    <string name="tv_change2">This policy is effective as of 2020–08–16</string>
    <string name="tv_contact">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at an2419998@gmail.com.</string>
    <string name="tv_version">Version</string>
    <string name="tv_version_1_0_0">1.0.0</string>
    <string name="tv_app_author">App Author</string>
    <string name="tv_name_author">Nguyen Hoang An</string>
    <string name="tv_contact_me">Contact Me</string>
    <string name="tv_contact_me_link1">
        <a href="https://www.facebook.com/an.nguyenhoang.10">Facebook</a>
    </string>
    <string name="tv_contact_me_link2">
        <a href="https://github.com/anhoang241998">Github</a>
    </string>
    <string name="tv_verify_your_account">Verify your account</string>
    <string name="tv_verification_email_details">We will send verification email to your email address</string>
    <string name="tv_btn_verificaiton">send verification email</string>
    <string name="tv_btn_list">Log In</string>
    <string name="tv_thanks">Please log in again!!!</string>
    <string name="tv_sucess">Your email need to verified!</string>
    <string name="menu_add_to_cart">Add to Cart</string>

</resources>